# webrock

./: .gitignore  .prettierrc.js  README.md  demo.ipynb  package-lock.json  package.json  pyproject.toml  tsconfig.json
webrock/: __init__.py  core.py  exceptions.py  image_processing.py  javascript.py
webrock-js/: constants.ts  elements.ts  locator.ts  main.ts  tagging.ts
webrock-js/types/: coordinates.ts  tags.ts
webrock/artifacts/: __init__.py  base.py  s3.py
webrock/bedrock/: __init__.py  base.py  claude.py
webrock/browser/: __init__.py  base.py  playwright.py
webrock/models/: __init__.py  tag.py
webrock/payload/: __init__.py  action.py  system.py
webrock/tags/: __init__.py  base.py  element_tags.py
webrock/tools/: __init__.py  base.py  click.py  fatal_error.py  final_answer.py  press_key.py  type_text.py
webrock/utils/: image_processing.py  logging.py
